--- a/lchain/llm_chain.ipynb
+++ b/lchain/llm_chain.ipynb
@@ -2,12 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='首先，我们直接使用模型。聊天模型是LangChain Runnables的实例，这意味着它们暴露了一个与之交互的标准接口。为了简单地调用模型，我们可以将一系列消息传递给.invoke方法。', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 50, 'prompt_tokens': 68, 'total_tokens': 118, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_72ed7ab54c', 'finish_reason': 'stop', 'logprobs': None}, id='run-69c1c24f-3417-4768-8c5a-4766208b8a5b-0', usage_metadata={'input_tokens': 68, 'output_tokens': 50, 'total_tokens': 118, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
     "from langchain_core.messages import HumanMessage, SystemMessage\n",
+    "\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv(dotenv_path=\"../.env\",verbose=True)\n",
     "\n",
     "model = ChatOpenAI(model=\"gpt-4o-mini\")\n",
     "messages = [\n",
@@ -25,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +50,7 @@
        " HumanMessage(content='hi!', additional_kwargs={}, response_metadata={})]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,6 +85,9 @@
    "source": [
     "from langchain_openai import ChatOpenAI\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv(dotenv_path=\"../.env\",verbose=True)\n",
     "\n",
     "model = ChatOpenAI(model=\"gpt-4o-mini\")\n",
     "\n",
