--- a/lchain/structured_outputs.ipynb
+++ b/lchain/structured_outputs.ipynb
@@ -277,6 +277,91 @@
     "chain = prompt | llm | parser\n",
     "chain.invoke({\"query\": query})"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "当然，也可以使用自定义的 parser："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import re\n",
+    "from typing import List\n",
+    "\n",
+    "from langchain_core.messages import AIMessage\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from pydantic import BaseModel, Field\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv(dotenv_path=\"../.env\",verbose=True)\n",
+    "\n",
+    "llm = ChatOpenAI(model=\"gpt-4o-mini\")\n",
+    "\n",
+    "class Person(BaseModel):\n",
+    "    \"\"\"Information about a person.\"\"\"\n",
+    "\n",
+    "    name: str = Field(..., description=\"The name of the person\")\n",
+    "    height_in_meters: float = Field(\n",
+    "        ..., description=\"The height of the person expressed in meters.\"\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "class People(BaseModel):\n",
+    "    \"\"\"Identifying information about all people in a text.\"\"\"\n",
+    "\n",
+    "    people: List[Person]\n",
+    "\n",
+    "\n",
+    "# Prompt\n",
+    "prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\n",
+    "            \"system\",\n",
+    "            \"Answer the user query. Output your answer as JSON that  \"\n",
+    "            \"matches the given schema: \\`\\`\\`json\\n{schema}\\n\\`\\`\\`. \"\n",
+    "            \"Make sure to wrap the answer in \\`\\`\\`json and \\`\\`\\` tags\",\n",
+    "        ),\n",
+    "        (\"human\", \"{query}\"),\n",
+    "    ]\n",
+    ").partial(schema=People.model_json_schema())\n",
+    "\n",
+    "\n",
+    "# Custom parser\n",
+    "def extract_json(message: AIMessage) -> List[dict]:\n",
+    "    \"\"\"Extracts JSON content from a string where JSON is embedded between \\`\\`\\`json and \\`\\`\\` tags.\n",
+    "\n",
+    "    Parameters:\n",
+    "        text (str): The text containing the JSON content.\n",
+    "\n",
+    "    Returns:\n",
+    "        list: A list of extracted JSON strings.\n",
+    "    \"\"\"\n",
+    "    text = message.content\n",
+    "    # Define the regular expression pattern to match JSON blocks\n",
+    "    pattern = r\"\\`\\`\\`json(.*?)\\`\\`\\`\"\n",
+    "\n",
+    "    # Find all non-overlapping matches of the pattern in the string\n",
+    "    matches = re.findall(pattern, text, re.DOTALL)\n",
+    "\n",
+    "    # Return the list of matched JSON strings, stripping any leading or trailing whitespace\n",
+    "    try:\n",
+    "        return [json.loads(match.strip()) for match in matches]\n",
+    "    except Exception:\n",
+    "        raise ValueError(f\"Failed to parse: {message}\")\n",
+    "\n",
+    "query = \"Anna is 23 years old and she is 6 feet tall\"\n",
+    "print(prompt.format_prompt(query=query).to_string())\n",
+    "\n",
+    "chain = prompt | llm | extract_json\n",
+    "chain.invoke({\"query\": query})"
+   ]
   }
  ],
  "metadata": {
