--- a/lchain/concepts/lcel.ipynb
+++ b/lchain/concepts/lcel.ipynb
@@ -41,7 +41,27 @@
     "    \n",
     "    ```\n",
     "    chain = RunnableSequence([RunnableParallel(mapping), runnable3])\n",
-    "    ```"
+    "    ```\n",
+    "\n",
+    "    Inside an LCEL expression, a function is automatically converted to a `RunnableLambda`.\n",
+    "\n",
+    "    For example, the following code:\n",
+    "    \n",
+    "    ```\n",
+    "    def some_func(x):\n",
+    "    return x\n",
+    "\n",
+    "    chain = some_func | runnable1\n",
+    "    ```\n",
+    "\n",
+    "    It gets automatically converted to the following:\n",
+    "\n",
+    "    ```\n",
+    "    chain = RunnableSequence([RunnableLambda(some_func), runnable1])\n",
+    "    ```\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
