--- a/lchain/howtos/tool_configure.ipynb
+++ b/lchain/howtos/tool_configure.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "有一点需要关注：\n",
+    "\n",
+    "Tools are runnables, and you can treat them the same way as any other runnable at the interface level - you can call invoke(), batch(), and stream() on them as normal.\n",
+    "\n",
+    "把一个函数包装成 tool 的关键是添加 @tool 装饰器"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
