--- a/lchain/tutorials/llm_chain.ipynb
+++ b/lchain/tutorials/llm_chain.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Build a simple LLM application with chat models and prompt templates](https://python.langchain.com/docs/tutorials/llm_chain/)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -85,9 +92,6 @@
    "source": [
     "from langchain_openai import ChatOpenAI\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
-    "from dotenv import load_dotenv\n",
-    "\n",
-    "load_dotenv(dotenv_path=\"../.env\",verbose=True)\n",
     "\n",
     "model = ChatOpenAI(model=\"gpt-4o-mini\")\n",
     "\n",
