--- a/huggingface/intro.ipynb
+++ b/huggingface/intro.ipynb
@@ -48,23 +48,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "韩国的首都是首尔（Seoul）。首尔是韩国的政治、经济、文化中心，也是韩国最大的城市。"
+      "韩国的首都是首尔（Seoul）。"
      ]
     }
    ],
    "source": [
     "from openai import OpenAI\n",
+    "import os\n",
     "\n",
     "client = OpenAI(\n",
     "\tbase_url=\"https://router.huggingface.co/hf-inference/v1\",\n",
-    "\tapi_key=\"\"\n",
+    "\tapi_key=os.getenv(\"HUGGINGFACE_API_KEY\")\n",
     ")\n",
     "\n",
     "messages = [\n",
