--- a/lchain/concepts/prompt_templates.ipynb
+++ b/lchain/concepts/prompt_templates.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[Prompt Templates](https://python.langchain.com/docs/concepts/prompt_templates/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "有几种类型的提示词模版:"
    ]
   },
@@ -11,12 +18,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* **String PromptTemplates**"
+    "#### String PromptTemplates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +32,7 @@
        "StringPromptValue(text='Tell me a joke about cats')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,12 +49,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* **ChatPromptTemplates**"
+    "#### ChatPromptTemplates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +63,7 @@
        "ChatPromptValue(messages=[SystemMessage(content='You are a helpful assistant', additional_kwargs={}, response_metadata={}), HumanMessage(content='Tell me a joke about chickens', additional_kwargs={}, response_metadata={})])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* **MessagesPlaceholder**"
+    "#### MessagesPlaceholder"
    ]
   },
   {
